--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -171,6 +171,12 @@ header.sticky {
     margin-top: 7px;
 }
 @media only screen and (max-width:991px) {
+    header {
+        position: unset;
+    }
+    header.sticky {
+        position: unset;
+    }
     .menu-wrap {
         display: none;
     }
