--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -9,10 +9,18 @@
                     <h3 class="green-text">January 20, 2021</h3>
                 </div>
                 <div class="link-wrap">
-                    <a href="/" class="cdk-btn-white"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <a class="cdk-btn-white"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M19.8 4.8L19.2 4.2C18.4 3.4 17.4 3 16.3 3H16C14.9 3 13.9 3.4 13.2 4.2L10.3 7C9.8 7.5 9.8 8.4 10.3 8.9L10.4 9C10.6 9.2 10.9 9.2 11.1 9L14.6 5.6C15 5.2 15.5 5 16 5H16.3C16.9 5 17.4 5.2 17.8 5.6L18.4 6.2C18.8 6.6 19 7.1 19 7.7V8C19 8.5 18.8 9 18.4 9.4L15 12.9C14.8 13.1 14.8 13.4 15 13.6L15.1 13.7C15.6 14.2 16.5 14.2 17 13.7L19.8 10.8C20.6 10.1 21 9.1 21 8V7.7C21 6.6 20.6 5.6 19.8 4.8ZM8.5 14.3C8.5 14.4333 8.53333 14.5667 8.6 14.7L9.3 15.4C9.43333 15.4667 9.56667 15.5 9.7 15.5C9.83333 15.5 9.96667 15.4667 10.1 15.4L15.3 10.1C15.4333 9.96667 15.5 9.83333 15.5 9.7C15.5 9.56667 15.4333 9.46667 15.3 9.4L14.6 8.7C14.5333 8.56667 14.4333 8.5 14.3 8.5C14.1667 8.5 14.0333 8.56667 13.9 8.7L8.6 13.9C8.53333 14.0333 8.5 14.1667 8.5 14.3ZM13.6 15C13.4 14.8 13.1 14.8 12.9 15L9.4 18.4C9.1 18.8 8.5 19 8 19H7.7C7.1 19 6.6 18.8 6.2 18.4L5.6 17.8C5.2 17.4 5 16.9 5 16.3V16C5 15.5 5.2 15 5.6 14.6L9 11.1C9.2 10.9 9.2 10.6 9 10.4L8.9 10.3C8.4 9.8 7.5 9.8 7 10.3L4.2 13.2C3.4 13.9 3 14.9 3 16V16.4C3 17.4 3.4 18.4 4.2 19.2L4.8 19.8C5.6 20.6 6.6 21 7.7 21H8C9.1 21 10.1 20.6 10.8 19.9L13.7 17C14.2 16.5 14.2 15.6 13.7 15.1L13.6 15Z" fill="black"/>
                         </svg></span> Share Link
                     </a>
+                    <!-- <div class="share-link-hidden">
+                        <div class="sq-top"></div>
+                        <div class="share-to-list">
+                            <a>Facebook</a>
+                            <a>what’s app</a>
+                            <a>Facebook</a>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
