--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -73,7 +73,7 @@
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
-                        <a class="cdk-btn-green" href="/contact">Apply Now</a>
+                        <a class="cdk-btn-green" (click)="scroll(target)">Apply Now</a>
                     </div>
                 </div>
                 <div class="career-cards-wrapper">
@@ -87,7 +87,7 @@
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
-                        <a class="cdk-btn-green" href="/contact">Apply Now</a>
+                        <a class="cdk-btn-green" (click)="scroll(target)">Apply Now</a>
                     </div>
                 </div>
                 <div class="career-cards-wrapper">
@@ -101,7 +101,7 @@
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
-                        <a class="cdk-btn-green" href="/contact">Apply Now</a>
+                        <a class="cdk-btn-green" (click)="scroll(target)">Apply Now</a>
                     </div>
                 </div>
                 <div class="career-cards-wrapper">
@@ -115,14 +115,14 @@
                     </h3>
                     <p class="exp-text primery-text">(2+ Years) Mohali</p>
                     <div class="bnt-wrap">
-                        <a class="cdk-btn-green" href="/contact">Apply Now</a>
+                        <a class="cdk-btn-green" (click)="scroll(target)">Apply Now</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="career-form-section">
+<section class="career-form-section" #target>
     <div class="container">
         <div class="form-and-img-wrapper flex_two">
             <div class="career-form-wrap">
