--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="main-header-wrap flex">
             <div class="logo-wrap">
-                <a routerLink="/">
+                <a class="menu-item" routerLink="/">
                 <img src="../../assets/image/CD_LOGO.webp" alt="">
                 </a>
             </div>
@@ -76,54 +76,54 @@
         <div class="menu-wrap-mobile" id="menu">
             <ul class="menu-ul-mobile">
                 <li>
-                    <a routerLinkActive="active" routerLink="/about">About</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/about">About</a>
                 </li>
                 <li class="dm-service">
                     <div class="flex">
-                        <a routerLinkActive="active" routerLink="/service">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
+                        <a class="menu-item" routerLinkActive="active" routerLink="/service">Service</a><span class="tab-heading"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
                             <path d="M7.83105 9.84547C8.48183 10.4963 9.53871 10.4963 10.1895 9.84547L16.8536 3.1814C17.3325 2.70242 17.4731 1.98916 17.2128 1.3644C16.9525 0.739649 16.3486 0.333557 15.6717 0.333557L2.34361 0.333557C1.67199 0.333557 1.06286 0.739649 0.802542 1.3644C0.542227 1.98916 0.688004 2.70242 1.16178 3.1814L7.82584 9.84547H7.83105Z" fill="white"/>
                             </svg></span>
                     </div>
                         <div class="tabcontent">
                             <ul class="">
                                 <li class="drop-list">
-                                    <a href="/">UX/UI Design</a>
+                                    <a class="menu-item" routerLink="/service-details">UX/UI Design</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">shopify Web Development</a>
+                                    <a class="menu-item" routerLink="/shopify-web">shopify Web Development</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">Strategy & CRO Insights</a>
+                                    <a class="menu-item" routerLink="/strategy&cro" >Strategy & CRO Insights</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">Replatforming</a>
+                                    <a class="menu-item" href="/">Replatforming</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">Data Migration</a>
+                                    <a class="menu-item" routerLink="/data-migration">Data Migration</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">Performance Enhancement</a>
+                                    <a class="menu-item" href="/">Performance Enhancement</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">theme development</a>
+                                    <a class="menu-item" href="/">theme development</a>
                                 </li>
                                 <li class="drop-list">
-                                    <a href="/">Custom Shopify App Development</a>
+                                    <a class="menu-item" routerLink="/shopify-app">Custom Shopify App Development</a>
                                 </li>
                             </ul>
                         </div>
                 </li>
                 <li>
-                    <a routerLinkActive="active" routerLink="/our-work">Protfolio</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/our-work">Protfolio</a>
                 </li>
                 <li>
-                    <a routerLinkActive="active" routerLink="/blog-list">blogs</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/blog-list">blogs</a>
                 </li>
                 <li>
-                    <a routerLinkActive="active" routerLink="/our-team">team</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/our-team">team</a>
                 </li>
                 <li>
-                    <a routerLinkActive="active" routerLink="/contact">contact us</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/contact">contact us</a>
                 </li>
             </ul>
         </div>
