--- a/src/app/blog-detail/blog-detail.component.css
+++ b/src/app/blog-detail/blog-detail.component.css
@@ -1,17 +1,18 @@
-/* .share-link-hidden {
-    width: 200px;
-    height: 200px;
+#blog-detail-first .link-wrap .share-link-hidden {
+    width: 250px;
     background: #fff;
     border-radius: 5px;
     position: absolute;
     right: 0;
     top: 60px;
+    padding-bottom: 10px;
     display: none;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 20px, rgba(0, 0, 0, 0.15) 0px 8px 8px;
 }
-.link-wrap {
+#blog-detail-first .link-wrap {
     position: relative;
 }
-.sq-top {
+#blog-detail-first .link-wrap .share-link-hidden .sq-top {
     width: 15px;
     height: 15px;
     transform: rotate(45deg);
@@ -19,20 +20,37 @@
     margin: 0 auto;
     margin-top: -6px;
 }
-.cdk-btn-white.activate + .share-link-hidden {
+#blog-detail-first .link-wrap .cdk-btn-white.activate + .share-link-hidden {
     display: block;
 }
-.share-to-list {
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
 }
-.share-to-list a {
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list a {
     padding: 10px 0;
     text-decoration: none;
     color: #000;
-    font-size: 20px;
+    font-size: 18px;
     font-family: var(--second-heading);
-} */
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-start;
+    padding: 10px 0 10px 20px;
+}
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list a span {
+    display: block;
+}
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list a .fh {
+    margin-right: 10px;
+}
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list a:not(:last-child) {
+    border-bottom: 1px solid #00000042;
+}
+#blog-detail-first .link-wrap .share-link-hidden .share-to-list a span:hover {
+    color: #37C8AE;
+}
