--- a/src/app/career/career.component.css
+++ b/src/app/career/career.component.css
@@ -213,7 +213,7 @@
     transform: scale(1.1);
 }
 .career-form-section {
-    margin: 98px 0 185px;
+    padding: 98px 0 185px;
 }
 
 @media only screen and (min-width:1280px) and (max-width:1366px) {
@@ -249,7 +249,7 @@
     }
     /* form-section */
     .career-form-section {
-        margin: 48px 0 100px;
+        padding: 48px 0 100px;
     }
     .career-form-section .form-and-img-wrapper .career-form-wrap .career-form-heading {
         margin-bottom: 30px;
@@ -278,7 +278,7 @@
     }
     /* form-section */
     .career-form-section {
-        margin: 48px 0 100px;
+        padding: 48px 0 100px;
     }
     .career-form-section .form-and-img-wrapper {
         flex-wrap: wrap-reverse;
@@ -346,7 +346,7 @@
     }
     /* form section */
     .career-form-section {
-        margin: 0px 0 55px;
+        padding: 0px 0 55px;
     }
     .career-form-section .form-and-img-wrapper {
         row-gap: 30px;
