--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -201,10 +201,15 @@ header.sticky {
         width: 100%;
         position: fixed;
         background-color: #010C16;
-        z-index: 1;
+        z-index: 5;
+        height: 100%;
     }
     #menu .menu-ul-mobile {
-        padding: 25px 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+        height: 100%;
+        max-height: 100%;
+        padding: 0px 0;
         background: linear-gradient(166deg, rgba(12, 55, 48, 0.50) 0%, #000 100%);
     }
     #menu .menu-ul-mobile li {
