--- a/src/app/our-work/our-work.component.css
+++ b/src/app/our-work/our-work.component.css
@@ -24,5 +24,6 @@
     .our_work_section {
         padding: 70px 0px 50px;
         margin-bottom: 0px;
+        margin-top: 0 !important;
     }
 }
