--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -208,7 +208,7 @@
                     </p>
                 </div>
             </div>
-            <div class="our_work_body_wrap">
+            <!-- <div class="our_work_body_wrap">
                 <div class="our_work-images_wrap flex wrap">
                     <div class="work-image_one work-image_all">
                         <div class="card-h-txt">
@@ -275,6 +275,75 @@
                 </div>
                 <div class="bnt-wrap">
                     <a class="cdk-btn-green" routerLinkActive="active" routerLink="/our-work">view all projects</a>
+                </div>
+            </div> -->
+            <div class="our_work_body_wrap">
+                <div class="our_work-images_wrap flex wrap">
+                    <a routerLinkActive="active" routerLink="/luxandnyx" class="work-image_one work-image_all">
+                        <div class="card-h-txt">
+                            <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt="">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">luxandnyx</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_1.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.webp" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">luxandnyx</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                    <a routerLinkActive="active" routerLink="/paris-select" class="work-image_two work-image_all">
+                        <div class="card-h-txt">
+                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
+                            <h3 class="logo_card">Paris Select</h3>
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Paris Select</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_2.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.webp" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Paris Select</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                </div>
+                <div class="our_work-images_wrap flex wrap second">
+                    <a routerLink="/egyptian" class="work-image_three work-image_all">
+                        <div class="card-h-txt">
+                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
+                            <h3 class="logo_card">Egyptianqueenbeauty</h3>
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Egyptianqueenbeauty</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_3.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.webp" alt="">
+                    </a>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Egyptianqueenbeauty</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
+                    <div class="work-image_four work-image_all">
+                        <div class="card-h-txt">
+                            <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
+                            <h3 class="logo_card">Igluu Meal Prep</h3>
+                            <div class="bottom_card">
+                            <h4 class="card-heading">Igluu Meal Prep</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_4.webp" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_4-mobile.webp" alt="">
+                    </div>
+                    <div class="our_card_bottom_text mobile">
+                        <h4 class="card-heading">Igluu Meal Prep</h4>
+                        <p class="card-txt">Shopify Plus Design & Build</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -355,7 +424,7 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex">
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
@@ -364,7 +433,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -373,7 +442,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
