--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -9,7 +9,7 @@
     max-width: 1074px;
     margin: 0 auto;
     justify-content: space-between;
-    background-color: #040A17;
+    background-color: #000;
     padding: 75px 80px;
     border-radius: 10px;
     margin-bottom: 67px;
