--- a/src/app/shopify-web-development/shopify-web-development.component.css
+++ b/src/app/shopify-web-development/shopify-web-development.component.css
@@ -15,7 +15,7 @@
     font-family: var(--second-heading);
 }
 #service-three.service-bacground-section {
-    /* background: url(../../assets/image/servicre-inner/service-detail-bacground2.webp); */
+    background: url(../../assets/image/servicre-inner/service-detail-bacground2.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
