--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="form-and-img-wrapper flex_two">
             <div class="career-form-wrap">
-                <h2 class="career-form-heading">Nothing for you ? Send your CV</h2>
+                <h2 class="career-form-heading">Join Our Team, Send your CV</h2>
                 <form action="" class="career-form">
                     <fieldset>
                         <input type="text" name="firstname" id="firstname" required>
