--- a/src/app/data-migration/data-migration.component.css
+++ b/src/app/data-migration/data-migration.component.css
@@ -8,7 +8,7 @@
     padding: 176.8px 0 87px;
 }
 #service-three.service-bacground-section {
-    /* background: url(../../assets/image/servicre-inner/service-detail-bacground4.webp); */
+    background: url(../../assets/image/servicre-inner/service-detail-bacground4.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
