--- a/src/app/resource-7/resource-7.component.html
+++ b/src/app/resource-7/resource-7.component.html
@@ -164,7 +164,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLinkActive="active" routerLink="/resource-3" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -173,7 +173,7 @@
                         <p>We provide creative and innovative Digital services</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="blog_card_wrap">
+                <a routerLinkActive="active" routerLink="/resource-2" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
